Updated README and home.ejs files to be relevant to current version.

--- a/node/views/home.ejs
+++ b/node/views/home.ejs
@@ -467,8 +467,11 @@
           <button type="submit">🚀 Enter Queue (Rated Game)</button>
         </form>
 
-        <form action="/play-friend" method="GET" style="width: 100%; text-align: center;">
+        <!--<form action="/play-friend" method="GET" style="width: 100%; text-align: center;">
           <button type="submit" class="secondary">👥 Play a Friend</button>
+        </form> -->
+        <form>
+          <button type="submit" class="secondary">👥 Play a Friend (Coming soon)</button>
         </form>
       </div>
 
